--- a/src/plugin.scss
+++ b/src/plugin.scss
@@ -7,5 +7,14 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
+    background-color:black;
+    text-align: center;
+    padding-top: 10%;
+  }
+
+  & .vjs-placeHolderMsg {
+	font-size: 3em;
+  background-color: rgba(128,128,128,0.85);
+	color: #FFFF00;
   }
 }
