DYNAMIC SWITCHING IN DRAFT VERSION - CURRENTLY NOT WORKING (hoping to find a good soul to help with the following:)\n\n placeholder.js now checks the status and content of the source file included in the embed code, via the function checkLive and once it returns a valid file with at least 3 segments (required to play back m3u8), then discards the placeholder and attempts to play the file. Unfortunately this last bit does not work and I am not sure why. \n\n Also whenever an error is thrown in the player while playing, the script runs and loops continuously sometimes. I did not spend time on the latter because the former is obviously a blocker for the script to work as it should.

--- a/src/plugin.scss
+++ b/src/plugin.scss
@@ -13,8 +13,16 @@
   }
 
   & .vjs-placeHolderMsg {
-	font-size: 3em;
-  background-color: rgba(128,128,128,0.85);
-	color: #FFFF00;
+    font-size: 3em;
+    background-color: rgba(128,128,128,0.85);
+    color: #FFFF00;
+  }
+
+  & .vjs-placeHolderSpin {
+    background:url(http://loadinggif.com/generated-image?imageId=22&bgColor=%23ffffff&fgColor=%23ff7c00&transparentBg=1&download=0&random=0.5277500189998274) no-repeat;
+    width: 128px;
+    height: 15px;
+    margin: auto;
+    margin-top: 5%;
   }
 }
